--- a/dl_project/index.html
+++ b/dl_project/index.html
@@ -13083,7 +13083,7 @@ div#notebook {
 
 <iframe width="900" height="600" src="https://www.youtube.com/embed/Vf2Gzy6Md8w" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
-<p><a href="https://colab.research.google.com/drive/1lEPji-B_yPgXL3DHXqSiKiGcS91Ma0UJ">Open in colab</a>.           <a href="https://docs.google.com/presentation/d/1w3q-eJXMujxYsdM7H8aRY978ZXgC8QuDvoPYwoEPhFU/edit?usp=sharing">View Presentation</a>.    <a href="https://youtu.be/oj4ZwiRbF1g">Prediction Demo using Test Images</a></p>
+<p><a target="_blank" rel="noopener noreferrer" href="https://colab.research.google.com/drive/1lEPji-B_yPgXL3DHXqSiKiGcS91Ma0UJ">Open in colab</a>.           <a target="_blank" rel="noopener noreferrer"href="https://docs.google.com/presentation/d/1w3q-eJXMujxYsdM7H8aRY978ZXgC8QuDvoPYwoEPhFU/edit?usp=sharing">View Presentation</a>.    <a target="_blank" rel="noopener noreferrer" href="https://youtu.be/oj4ZwiRbF1g">Prediction Demo using Test Images</a></p>
 
 </div>
 </div>
